drrx/fixtures/invalid/invalid-root-flow.tree.drrx
| .                       # EXPECTED ERROR: FW.12 no flow markers on root line
